# render

./: .gitignore  .gitmodules  .isort.cfg  README.md  index.html  requirements.txt
.github/workflows/: pr-python.yml  pr-rust.yml
client/: lib.config.js  package.json  rc-dock.css  webpack.config.js
client/src/: app.tsx  callbacks.tsx  index.html  index.jsx  index.tsx  weakvaluemap.tsx
libraries/: render_altair.py  render_ant_icons.py  render_bokeh.py  render_html.py  render_iconify.py  render_mantine_prism.py  render_monaco.py  render_plotly.py  render_prism.py  render_spectacle.py  render_swiper.py  render_tabler_icons.py
libraries/render_aggrid/: __init__.py  _auto.py  column.py  grid.py
libraries/render_antd/: __init__.py  _auto.py  _input.py  _list.py  affix.py  alert.py  anchor.py  app.py  auto_complete.py  avatar.py  back_top.py  badge.py  breadcrumb.py  button.py  calendar.py  card.py  carousel.py  cascader.py  checkbox.py  collapse.py  color_picker.py  config_provider.py  date_picker.py  descriptions.py  divider.py  drawer.py  dropdown.py  empty.py  flex.py  float_button.py  form.py  grid.py  icon.py  image.py  input.py  input_number.py  layout.py  list.py  mentions.py  menu.py  (+35 more)
libraries/render_mantine/: __init__.py  _auto.py  accordion.py  actionicon.py  affix.py  alert.py  anchor.py  appshell.py  aspectratio.py  autocomplete.py  avatar.py  backgroundimage.py  badge.py  blockquote.py  box.py  breadcrumbs.py  burger.py  button.py  card.py  center.py  checkbox.py  chip.py  closebutton.py  code.py  collapse.py  colorinput.py  colorpicker.py  colorswatch.py  combobox.py  comboboxdropdown.py  comboboxoption.py  container.py  copybutton.py  dialog.py  divider.py  drawer.py  (+71 more)
render/: .isort.cfg  README.md  __init__.py  app_runner.py  async_objects.py  common.py  components.py  controller.py  dashboard.py  dict_of_observables.py  import_error.py  kernel.py  mapping.py  observability.py  observable_collections.py  props.py  test.py  test_classes.py  utils.py  window.py
rs/: Cargo.toml
rs/src/: main.rs
tests/: test_controller.py  test_utils.py  test_value.py  utils.py
(+601 files in other folders)
