[package]
name = "render"
version = "0.9.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4"
rmp-serde = "0.15.5"
serde = {version="1.0.130", features = ["derive"] }
futures = { version = "0.3", default-features = false }
percent-encoding = "2.1.0"
futures-delay-queue = "0.5.0"
bytes = "0.5.6"
simple-error = "0.2"
axum = {version = "0.4.5", features = ["ws", "headers"] }
axum-server = { version = "0.3" }
tracing = "0.1.30"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "fs", "trace"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
headers = "0.3.6"
sys-info = "0.9.1"
normpath = "0.3.2"
colored = "2.0.0"
enable-ansi-support = "0.1.2"
num-traits = "0.2"
num-derive = "0.3"
sysinfo = "0.28.4"
env_logger = "0.10.0"
async-channel = "2.1.1"
chrono = "0.4.33"
